[#96823320] fix customer alphabet search alignment

--- a/src/modules/customers/css/customers.scss
+++ b/src/modules/customers/css/customers.scss
@@ -1,5 +1,5 @@
 [state^="customers"] {
-    max-width: 445px;
+    max-width: 475px;
     margin: 45px auto;
 
     .create-item{
