--- a/src/modules/customers/css/customersSearch.scss
+++ b/src/modules/customers/css/customersSearch.scss
@@ -32,8 +32,8 @@
     }
 
     .letter-search{
-        width: 110%;
-        margin: 15px 0 15px -5%;
+        width: 100%;
+        margin: 15px 0 15px -8px;
         color: $text-dark-grey;
 
         span{
